Fix problem with triangle effect not showing on mobile

--- a/styles/sass/_options.scss
+++ b/styles/sass/_options.scss
@@ -44,7 +44,7 @@
       border: none;
       padding: .5rem;
       font-size: 1rem;
-      width: 10rem;
+      width: 8rem;
       margin-left: 1rem;
 
       option {
