--- a/styles/stylesheets/app.css
+++ b/styles/stylesheets/app.css
@@ -357,7 +357,7 @@ html body div.ng-scope section .options:not(.search) select {
   border: none;
   padding: .5rem;
   font-size: 1rem;
-  width: 10rem;
+  width: 8rem;
   margin-left: 1rem;
 }
 /* line 51, ../sass/_options.scss */
